[package]
authors = ['DNFT Protocol']
edition = '2018'
license = 'Unlicense'
name = 'node-template-runtime'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
hex-literal = { optional = true, version = '0.3.1' }
serde = { version = "1.0.119", optional = true, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

# local dependencies
pallet-ai = { path = '../pallets/ai', default-features = false }
pallet-common = { path = '../pallets/common', default-features = false }
pallet-dao = { path = '../pallets/dao', default-features = false }
pallet-nft721 = { path = '../pallets/nft721', default-features = false }
pallet-nft1155 = { path = '../pallets/nft1155', default-features = false }
pallet-nft2006 = { path = '../pallets/nft2006', default-features = false }
pallet-swap-amm = { path = '../pallets/swap_amm', default-features = false }
pallet-swap-auction = { path = '../pallets/swap_auction', default-features = false }
pallet-swap-orderbook = { path = '../pallets/swap_orderbook', default-features = false }
pallet-tax = { path = '../pallets/tax', default-features = false }
pallet-token = { path = '../pallets/token', default-features = false }
pallet-trade-pair = { path = '../pallets/trade_pair', default-features = false }


[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-io/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-ai/std',
    'pallet-common/std',
    'pallet-dao/std',
    'pallet-nft721/std',
    'pallet-nft1155/std',
    'pallet-nft2006/std',
    'pallet-swap-amm/std',
    'pallet-swap-auction/std',
    'pallet-swap-orderbook/std',
    'pallet-tax/std',
    'pallet-token/std',
    'pallet-trade-pair/std'
]
