[package]
authors = ['DNFT Protocol']
description = 'pallet-ai'
edition = '2018'
license = 'Unlicense'
name = 'pallet-ai'
version = '3.0.0'



[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
pallet-randomness-collective-flip = { version = '3.0.0', default-features = false }
utilities = { path = '../utilities', default-features = false }


[dev-dependencies]
sp-core = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
	"frame-benchmarking/std",
    "pallet-randomness-collective-flip/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

