[package]
authors = ['TMC']
description = 'pallet-nft'
edition = '2018'
license = 'Unlicense'
name = 'pallet-nft'
version = '2.0.0'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
#substrate
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false  }
sp-runtime = { version = '2.0.0', default-features = false  }
sp-std = { version = '2.0.0', default-features = false  }
sp-io = { version = '2.0.0', default-features = false  }
sp-core = { version = '2.0.0', default-features = false  }
codec = { package = 'parity-scale-codec', features = ['derive'], version = '1.3.0', default-features = false }
pallet-randomness-collective-flip = { version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
	'frame-system/std',
    'frame-support/std',
]

