[package]
authors = ['DNFT Protocol']
description = 'pallet-trade-pair'
edition = '2018'
license = 'Unlicense'
name = 'pallet-trade-pair'
version = '3.0.0'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
#basic
alt_serde = { version = "1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true}
byteorder = { version = "1.3.1", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }


#substrate
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false  }
sp-arithmetic = { version = '3.0.0', default-features = false  }
sp-runtime = { version = '3.0.0', default-features = false  }
sp-std = { version = '3.0.0', default-features = false  }
sp-io = { version = '3.0.0', default-features = false  }
sp-core = { version = '3.0.0', default-features = false  }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
randomness = { package = 'pallet-randomness-collective-flip', version = '3.0.0', default-features = false }
#balances = { package = 'pallet-balances', version = '3.0.0', default-features = false }

utilities = { path = '../utilities', default-features = false }

[features]
default = ['std']
std = [
	'serde',
    'codec/std',
    'safe-mix/std',
	'frame-system/std',
    'frame-support/std',
    'sp-arithmetic/std',
    'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'utilities/std',

]
