[package]
authors = ['DNFT Protocol']
description = 'utilities'
edition = '2018'
name = 'utilities'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
#substrate
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false  }
sp-runtime = { version = '3.0.0', default-features = false  }
sp-std = { version = '3.0.0', default-features = false  }
sp-io = { version = '3.0.0', default-features = false  }
sp-core = { version = '3.0.0', default-features = false  }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
randomness = { package = 'pallet-randomness-collective-flip', version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
	'sp-runtime/std',
	'sp-std/std',
	'codec/std',
]